update markers to make sure they're legible

--- a/src/core/client/admin/components/ModerateCard/Markers.css
+++ b/src/core/client/admin/components/ModerateCard/Markers.css
@@ -16,7 +16,6 @@
 }
 
 .detailsText {
-  color: var(--v2-palette-details-header);
   margin: 0;
 }
 
